pricelist/pricelist-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pricelist
  annotations:
    argocd.argoproj.io/sync-wave: "0"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-monitoring
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
